lib/nails_derive/tests/ui/from-request-missing-path.stderr
error: #[nails(path)] is needed
 --> $DIR/from-request-missing-path.rs:4:1
  |
4 | pub struct GetPostRequest {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Could not compile `nails_derive-tests`.
