lib/nails_derive/tests/ui/from-request-missing-path.rs
use nails_derive::Preroute;

#[derive(Preroute)]
pub struct GetPostRequest {}

fn main() {}
